fix skip-nav layout shift

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -59,7 +59,7 @@
   }
 
   .skip-content-nav {
-    @apply hidden absolute sm:inline-block px-4 py-2 transition-transform duration-200 transform -translate-y-12 text-primary focus:translate-y-3 focus:top-4 left-60 -top-2;
+    @apply hidden opacity-0 absolute sm:block px-4 py-2 transition-transform duration-200 transform -translate-y-12 text-primary focus:translate-y-3 focus:opacity-100 focus:top-4 left-60 -top-2;
   }
 }
 
